--- a/idcardcamera/src/main/res/layout/activity_camera.xml
+++ b/idcardcamera/src/main/res/layout/activity_camera.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_000000">
@@ -7,80 +8,84 @@
     <!--相机预览-->
     <com.wildma.idcardcamera.camera.CameraPreview
         android:id="@+id/camera_preview"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone" />
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
-        <!--左侧相机预览布局-->
-        <LinearLayout
+
+        <View
+            android:id="@+id/view_camera_crop_left"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:background="@color/preview_mock"
+            app:layout_constraintBottom_toTopOf="@+id/iv_camera_crop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <!--相机裁剪区域左边-->
-            <View
-                android:id="@+id/view_camera_crop_left"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/preview_mock" />
 
-            <LinearLayout
-                android:id="@+id/ll_camera_crop_container"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:orientation="vertical">
+        <!--相机裁剪区域顶部-->
+        <View
+            android:id="@+id/view_camera_crop_top"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/preview_mock"
+            app:layout_constraintTop_toBottomOf="@id/iv_camera_crop"
+            app:layout_constraintBottom_toTopOf="@id/fl_camera_option"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-                <!--相机裁剪区域顶部-->
-                <View
-                    android:id="@+id/view_camera_crop_top"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:background="@color/preview_mock" />
+        <!--相机裁剪区域-->
+        <ImageView
+            android:id="@+id/iv_camera_crop"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:scaleType="fitXY"
+            app:layout_constraintBottom_toTopOf="@+id/fl_camera_option"
+            app:layout_constraintDimensionRatio="16:9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-                <!--相机裁剪区域-->
-                <ImageView
-                    android:id="@+id/iv_camera_crop"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:scaleType="fitXY" />
+        <!--手动裁剪区域-->
+        <com.wildma.idcardcamera.cropper.CropImageView
+            android:id="@+id/crop_image_view"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/fl_camera_option"
+            app:layout_constraintDimensionRatio="16:9"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-                <!--手动裁剪区域-->
-                <com.wildma.idcardcamera.cropper.CropImageView
-                    android:visibility="gone"
-                    android:id="@+id/crop_image_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+        <!--相机裁剪区域底部-->
+        <TextView
+            android:id="@+id/view_camera_crop_bottom"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/preview_mock"
+            android:gravity="center"
+            android:text="@string/touch_to_focus"
+            android:textColor="@color/color_afff"
+            android:textSize="16dp"
+            android:visibility="gone" />
 
-                <!--相机裁剪区域底部-->
-                <TextView
-                    android:id="@+id/view_camera_crop_bottom"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:background="@color/preview_mock"
-                    android:gravity="center"
-                    android:text="@string/touch_to_focus"
-                    android:textColor="@color/color_afff"
-                    android:textSize="16dp" />
-
-            </LinearLayout>
-
-        </LinearLayout>
 
         <!--右侧操作布局-->
         <FrameLayout
             android:id="@+id/fl_camera_option"
-            android:layout_width="136dp"
-            android:layout_height="match_parent"
-            android:background="@color/preview_mock">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/preview_mock"
+            app:layout_constraintBottom_toBottomOf="parent">
 
             <!--拍照前操作布局-->
             <LinearLayout
@@ -88,7 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/iv_camera_flash"
@@ -137,5 +142,5 @@
 
         </FrameLayout>
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </RelativeLayout>
