--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,10 +44,10 @@
 
         <ImageView
             android:id="@+id/iv_back"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:scaleType="fitCenter"/>
+            android:scaleType="fitXY"/>
 
     </LinearLayout>
 
